<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="edittext_location" type="id"/>
</resources>